--- a/requirements.txt
+++ b/requirements.txt
@@ -74,3 +74,11 @@ win_inet_pton
 xgboost
 zipp
 zstandard==0.23.0
+streamlit>=1.32
+pandas>=2.2
+numpy>=2.2
+scikit-learn>=1.4
+matplotlib>=3.8
+xgboost>=2.0
+tpot==0.12.2
+shap>=0.44
